objects/vlocity_cmt__UserAdServer__c.object
<CustomObject>
    <description>The User Ad Server captures the mapping of a User with an Ad Server.</description>
    <fields>
        <fullName>vlocity_cmt__AdServerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This captures the Ad Server to which the User is mapped.</description>
        <label>Ad Server</label>
        <referenceTo>vlocity_cmt__AdServer__c</referenceTo>
        <relationshipLabel>User Ad Servers</relationshipLabel>
        <relationshipName>UserAdServers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdServerUserIdentifier__c</fullName>
        <description>This captures the Publisher&apos;s Contact/User Id whose ID has to be sent during Order creation. This is equivalent of TraffickerId in GAM.</description>
        <externalId>true</externalId>
        <label>Ad Server User Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CoreId__c</fullName>
        <description>Displays the ID of the core object created when migrating custom data.</description>
        <label>Core Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User record to which the Ad Server Mapping is created.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserAdServers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Ad Server</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__AdServerId__c</columns>
        <columns>vlocity_cmt__AdServerUserIdentifier__c</columns>
        <columns>vlocity_cmt__UserId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Ad Server Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Ad Servers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>